--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                 <a href="https://www.linkedin.com/in/md-ashadul-islam-4b12981b7">
                   <i class="fab mr-2 fa-linkedin"></i>
                 </a>
+                <a href="https://github.com/amiashadul">
+                  <i class="fab mr-2 fa-github"></i>
+                </a>
                 <a href="live:.cid.44d6225252059c8d">
                   <i class="fab fa-skype"></i>
                 </a>
@@ -405,6 +408,9 @@
                   <a href="https://www.linkedin.com/in/md-ashadul-islam-4b12981b7">
                     <i class="fab mr-2 fa-linkedin"></i>
                   </a>
+                  <a href="https://github.com/amiashadul">
+                  <i class="fab mr-2 fa-github"></i>
+                </a>
                   <a href="live:.cid.44d6225252059c8d">
                     <i class="fab fa-skype"></i>
                   </a>
