--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="https://github.com/amiashadul">
                   <i class="fab mr-2 fa-github"></i>
                 </a>
-                <a href="live:.cid.44d6225252059c8d">
+                <a href="https://join.skype.com/invite/XejGumuDUgDC">
                   <i class="fab fa-skype"></i>
                 </a>
               </div>  
@@ -411,7 +411,7 @@
                   <a href="https://github.com/amiashadul">
                   <i class="fab mr-2 fa-github"></i>
                 </a>
-                  <a href="live:.cid.44d6225252059c8d">
+                  <a href="https://join.skype.com/invite/XejGumuDUgDC">
                     <i class="fab fa-skype"></i>
                   </a>
                 </div>  
