--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
      <section class="intro">
         <div class="container">
           <div class="row">
-            <div class="intro-text col-12 col-md-6 col-lg-6 animate__animated animate__backInLeft">
+            <div class="intro-text text-center text-md-lef text-lg-left col-12 col-md-6 col-lg-6 animate__animated animate__backInLeft">
               <button type="button" class="btn btn-info hello">Hello I'm</button>
               <h1 class="name-text" style="font-family: 'Roboto', sans-serif;">Md. Ashadul Islam</h1>
               <h4 class="font-weight-normal">Professional Web Developer</h4>
@@ -86,7 +86,7 @@
                 <a href="https://join.skype.com/invite/XejGumuDUgDC">
                   <i class="fab fa-skype"></i>
                 </a>
-              </div>  
+              </div>  <br>
             </div>
 
             <div class="intro-pic col-lg-6 col-md-6 col-sm-12 mb-2 col-12 animate__animated animate__backInRight">
